fix: fixed some modal where not clickable due to z-index issue

--- a/src/scss/filejet-scss/sidebar/_sidebar_curve.scss
+++ b/src/scss/filejet-scss/sidebar/_sidebar_curve.scss
@@ -34,7 +34,7 @@
         bottom: -10px !important;
         height: inherit !important;
         width: 10px !important;
-        right: -1.5px !important;
+        right: 0px !important;
         background-color: var(--bs-purple-filejet) !important;
         background-image: none !important;
         transform: none !important;
